<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="#D819AF"
            android:text="@string/about_us"
            android:textColor="#F0F1F6"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtenrollment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:paddingTop="0dp"
            android:text="@string/enrollment"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imgprofile"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:contentDescription="@string/todo"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/dp1" />

        <TextView
            android:id="@+id/txtfname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:text="@string/fname"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtmname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:text="@string/mname"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtlname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:text="@string/lname"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:text="@string/Gender"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtcity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:text="@string/city"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>